# ssh-git-c4science.ch-source-liboncilla-hw

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/liboncilla-hw/: .gitignore  CMakeLists.txt  Common.cpp  Common.h  HWOncillaBackend.cpp  HWOncillaBackend.h  Nodes.h  OncillaHWSupervisor.cpp  OncillaHWSupervisor.h  Synchronizer.cpp  Synchronizer.h
src/liboncilla-hw/adapters/: Adapters.h  BrushlessMotorPosition.cpp  BrushlessMotorPosition.h  MagneticEncoder.cpp  MagneticEncoder.h  Servo.cpp  Servo.h  rx-io.cpp  rx-io.h
src/liboncilla-hw/config/: Config.cpp  Config.h  MainSection.cpp  MainSection.h  MotorSection.cpp  MotorSection.h
src/liboncilla-hw/nodes/: DeepCopyable.cpp  DeepCopyable.h  L0.cpp  L0.h  L1.cpp  L1.h  L1L2.cpp  L1L2.h  L2.cpp  L2.h  L3.cpp  L3.h  Nodes.h  SupervisorL4.cpp  SupervisorL4.h  SupervisorTrunk.cpp  SupervisorTrunk.h  SupervisorWorld.cpp  SupervisorWorld.h  Trunk.cpp  Trunk.h
src/liboncilla-hw/synchronization/: Queue.cpp  Queue.h  RBIOQueue.cpp  RBIOQueue.h  SBCPQueue.cpp  SBCPQueue.h  Synchronizer.cpp  Synchronizer.h  WiiSensor.cpp  WiiSensor.h
src/liboncilla-hw/xenomai-utils/: NativeError.cpp  NativeError.h  NativeHolder.cpp  NativeHolder.h  Utils.h
